--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [takeharu7]
-description: [takeharu7 のポートフォリオサイト]
+title: [take]
+description: [take のポートフォリオサイト]
